# playwright-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml  mutants.toml
.claude/skills/playwright-rs-usage/: SKILL.md
.github/workflows/: pages.yml  release.yml  security.yml  test.yml
crates/playwright/: CHANGELOG.md  Cargo.toml  build.rs
crates/playwright-rs-trace/: CHANGELOG.md  README.md
crates/playwright-rs-trace/src/: lib.rs
crates/playwright/examples/: canvas_pixels.rs  connect_over_cdp.rs
crates/playwright/src/: lib.rs  testing.rs
crates/playwright/src/protocol/: action_options.rs  browser.rs  browser_context.rs  click.rs  drag_to.rs  frame.rs  har_options.rs  locator.rs  mod.rs  page.rs  screencast.rs  screenshot.rs  tap.rs  (+1 more)
crates/playwright/tests/: playwright_version_test.rs
crates/site/: Cargo.toml  README.md  build.rs  index.html
crates/site-e2e/tests/: landing_page.rs
crates/site/deploy/: update-manifest.sh
crates/site/snippets/: card_fake_fs.rs  engine_chromium.rs  engine_firefox.rs  engine_webkit.rs  install_dev.toml  walk_01.rs  walk_02.rs  walk_03.rs  walk_04.rs  walk_05.rs
crates/site/src/: app.rs
crates/site/src/components/: code_tabs.rs  dogfood_banner.rs  feature_card.rs  features.rs  footer.rs  hero.rs  install.rs  mod.rs  unreleased_badge.rs  version_switcher.rs  walkthrough.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: versioned-site.md
docs/agent/: CLAUDE_SNIPPET.md
docs/implementation-plans/: v1.0-gap-analysis.md
scripts/: mutants.sh
supply-chain/: audits.toml  config.toml
(+18 files in other folders)
